--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Fri Mar 23 06:50:57 SAMT 2012
+#Fri Mar 23 15:26:29 SAMT 2012
 app.grails.version=1.3.7
 app.name=/
 app.servlet.version=2.4
@@ -8,6 +8,7 @@ plugins.cloud-foundry=1.0.1
 plugins.code-coverage=1.2.5
 plugins.hibernate=1.3.7
 plugins.jquery=1.6.1.1
+plugins.mail=1.0
 plugins.selenium-rc=1.0.2
 plugins.spring-security-core=1.1.2
 plugins.tomcat=1.3.7
